// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFormValidation Form errors are not shown if the form is not submitted 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[MockFunction]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <ValidationFeedbackMock>
        <div />
      </ValidationFeedbackMock>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors are not shown when fields change 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[MockFunction]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <ValidationFeedbackMock>
        <div />
      </ValidationFeedbackMock>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors are not shown when there are not 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[MockFunction]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <ValidationFeedbackMock>
        <div />
      </ValidationFeedbackMock>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors are shown when the form is submitted 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[MockFunction]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <ValidationFeedbackMock>
        <div>
          There are errors
        </div>
      </ValidationFeedbackMock>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation should render correctly 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[MockFunction]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    />
  </Form>
</WithFormValidation>
`;
